# rgb565-qoi

./: CLAUDE.md  CMakeLists.txt  README.md  README_en.md
examples/: CMakeLists.txt  decode_example.c  encode_example.c
include/: rgb565_qoi.h
src/: rgb565_qoi.c
tests/: CMakeLists.txt  test_rgb565_qoi.c
tools/: CMakeLists.txt  img2qoi.c  qoi2img.c  qoi_utils.c  qoi_utils.h  video2qoi.c
